[project]
name = "fujimura-tools"
version = "0.1.0"
description = "Fujimura & Hino (2019) Silence and voice in the organization — visualization, SEM fitting, and reproduction tools"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.11",
    "semopy>=2.3",
    "socsim-tools",
]

[project.scripts]
fujimura-tools = "fujimura_tools.cli:main"

[tool.uv.sources]
socsim-tools = { git = "https://github.com/akitenkrad/rs-social-simulation-tools", subdirectory = "tools/socsim_tools" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fujimura_tools"]
